# ProjetColeil

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
Assets/: config.txt
include/Model/: model.h
include/VueController/: vue_controller.h
src/: main.c
src/Model/: model.c
src/VueController/: vue_controller.c
